crates/tribute-passes/src/cont_to_libmprompt/snapshots/tribute_passes__cont_to_libmprompt__tests__handler_dispatch_with_tr_annotation.snap
---
source: crates/tribute-passes/src/cont_to_libmprompt/tests.rs
assertion_line: 464
expression: result
---
core.module @test {
  func.func @__tribute_next_tag() -> core.i32 {
      func.unreachable
  }
  func.func @__tribute_prompt(%0: core.i32, %1: core.ptr, %2: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_yield(%0: core.i32, %1: core.i32, %2: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_resume(%0: core.ptr, %1: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_resume_drop(%0: core.ptr) -> core.nil {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_yield_active() -> core.i1 {
      func.unreachable
  }
  func.func @__tribute_get_yield_op_idx() -> core.i32 {
      func.unreachable
  }
  func.func @__tribute_get_yield_continuation() -> core.ptr {
      func.unreachable
  }
  func.func @__tribute_get_yield_shift_value() -> core.ptr {
      func.unreachable
  }
  func.func @__tribute_reset_yield_state() -> core.nil {
      func.unreachable
  }
  func.func @__tribute_yield_set_rc_roots(%0: core.ptr, %1: core.i32) -> core.nil {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_cont_wrap_from_tls(%0: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @test_tr() -> core.i32 {
      %0 = arith.const {value = 0} : core.ptr
      %1 = func.constant {func_ref = @__prompt_body_0} : core.ptr
      %2 = arith.const {value = 1} : core.i32
      %3 = func.call %2, %1, %0 {callee = @__tribute_prompt} : core.ptr
      %4 = scf.loop %3 : core.i32 {
        ^bb1(%5: core.ptr):
          %6 = func.call {callee = @__tribute_yield_active} : core.i1
          %7 = scf.if %6 : core.nil {
              %8 = func.call {callee = @__tribute_get_yield_op_idx} : core.i32
              %9 = func.call {callee = @__tribute_get_yield_continuation} : core.ptr
              %10 = func.call {callee = @__tribute_get_yield_shift_value} : core.ptr
              %11 = func.call {callee = @__tribute_reset_yield_state} : core.nil
              %12 = arith.const {value = 1} : core.i1
              %13 = scf.if %12 : core.ptr {
                  %14 = func.call %9, %10 {callee = @__tribute_resume} : core.ptr
                  scf.yield %14
              } {
                  %15 = func.call %9, %10 {callee = @__tribute_resume} : core.ptr
                  scf.yield %15
              }
              scf.continue %13
          } {
              %16 = core.unrealized_conversion_cast %5 : core.i32
              scf.break %16
          }
      }
      func.return %4
  }
  func.func @__prompt_body_0(%0: core.ptr) -> core.ptr {
    ^bb0:
      %1 = arith.const {value = 10} : core.i32
      %2 = core.unrealized_conversion_cast %1 : core.ptr
      func.return %2
  }
}
