crates/tribute-passes/src/cont_to_libmprompt/snapshots/tribute_passes__cont_to_libmprompt__tests__lower_resume_basic.snap
---
source: crates/tribute-passes/src/cont_to_libmprompt/tests.rs
assertion_line: 110
expression: result
---
core.module @test {
  func.func @__tribute_prompt(%0: core.i32, %1: core.ptr, %2: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_yield(%0: core.i32, %1: core.i32, %2: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_resume(%0: core.ptr, %1: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_resume_drop(%0: core.ptr) -> core.nil {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_yield_active() -> core.i1 {
      func.unreachable
  }
  func.func @__tribute_get_yield_op_idx() -> core.i32 {
      func.unreachable
  }
  func.func @__tribute_get_yield_continuation() -> core.ptr {
      func.unreachable
  }
  func.func @__tribute_get_yield_shift_value() -> core.ptr {
      func.unreachable
  }
  func.func @__tribute_reset_yield_state() -> core.nil {
      func.unreachable
  }
  func.func @__tribute_yield_set_rc_roots(%0: core.ptr, %1: core.i32) -> core.nil {
    ^bb0:
      func.unreachable
  }
  func.func @__tribute_cont_wrap_from_tls(%0: core.ptr) -> core.ptr {
    ^bb0:
      func.unreachable
  }
  func.func @test_resume(%0: core.ptr, %1: core.ptr) -> core.ptr {
    ^bb0:
      %2 = func.call %0, %1 {callee = @__tribute_resume} : core.ptr
      func.return %2
  }
}
